# DraftOMatic

./: Cargo.toml  LOL_MINMAX_DRAFT.txt  README.md  main.py  parse_data.py  pull_data.py  test.py
src/: lib.rs  main.rs
templates/: view.html
